# PDF_reader_using_AI

./: .gitignore  README.md  data_showcase.ipynb  logging_config.py  main.py  prompt.py  pyproject.toml  reader.py  requirements.txt  tables.py
input_files/: 416887602.json
output_files/: 044551191_prompt.txt  044551191_response.json  416887602_prompt.txt  416887602_response.json  681285166_prompt.txt  681285166_response.json  681846065_prompt.txt  681846065_response.json  applications.csv  applications2.csv  medications.csv  medications1.csv  medications2.csv
tests/: test_reader_dtq1.py
